--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=STUDIEHUB
 spring.datasource.username=user01
 spring.datasource.password=P@ssw0rd
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+##printing parameter values in order
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 server.port=8080
 server.servlet.context-path=/studiehub
