--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #spring.messages.basename=messages, PlaceMessage
+
+#maxinum uploadlimite
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
