--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 #spring.messages.basename=messages, PlaceMessage
+
+#josh 0626 test, delete them before i commit
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
