--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=i3t5128@gmail.com
+spring.mail.password=dkunxeqybzpcvvdf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
