--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
@@ -53,7 +54,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		
+		<dependency>
+         <groupId>com.alibaba</groupId>
+         <artifactId>fastjson</artifactId>
+         <version>1.2.75</version>
+        </dependency>
+		
+		
+		
 	</dependencies>
+
+
+
+
+
+
 
 	<build>
 		<plugins>
