--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
@@ -55,18 +55,42 @@
 			<scope>test</scope>
 		</dependency>
 
-		
-		
-		    <dependency>
-         <groupId>com.alibaba</groupId>
-         <artifactId>fastjson</artifactId>
-         <version>1.2.75</version>
-        </dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.75</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
+<!-- ******************** for spring-caching practice ******************** -->
+
+		<!-- for SpringBoot spring-cache -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<!-- CaffeineCacheManager integrate -->
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+		</dependency>
+		<!-- RedisCacheManager integrate -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
+		<!-- redis client -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
+<!-- ******************** for spring-caching practice ******************** -->
 
 	</dependencies>
 
