--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
-<!-- ******************** for spring-caching practice ******************** -->
+		<!-- ******************** for spring-caching practice ******************** -->
 
 		<!-- for SpringBoot spring-cache -->
 		<dependency>
@@ -90,7 +90,13 @@
 			<artifactId>jedis</artifactId>
 		</dependency>
 
-<!-- ******************** for spring-caching practice ******************** -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+
+		<!-- ******************** for spring-caching practice ******************** -->
+
 
 	</dependencies>
 
